# self-registering-types-factory-cross-platform

./: .gitignore  CMakeLists.txt  main.cpp
include/CompressionMethodFactory/: CompressionMethodFactory.hpp
include/CompressionMethods/: BZCompression.hpp  GZIPCompression.hpp  ZipCompression.hpp
qt-test/test-self-factory/: CMakeLists.txt  main.cpp
qt-test/test-self-factory/include/CompressionMethodFactory/: CompressionMethodFactory.hpp
qt-test/test-self-factory/include/CompressionMethods/: BZCompression.hpp  GZIPCompression.hpp  ZipCompression.hpp
qt-test/test-self-factory/src/CompressionMethodFactory/: CompressionMethodFactory.cpp
qt-test/test-self-factory/src/CompressionMethods/: BZCompression.cpp  GZIPCompression.cpp  ZipCompression.cpp
src/CompressionMethodFactory/: CompressionMethodFactory.cpp
src/CompressionMethods/: BZCompression.cpp  GZIPCompression.cpp  ZipCompression.cpp
